# choochoo

./: Cargo.toml  MOTIVATION.md  README.md
.github/workflows/: ci.yml
crate/cfg_model/: Cargo.toml  build.rs
crate/cfg_model/src/: lib.rs  op_fns.rs  progress_unit.rs  rt.rs  setup_fn.rs  station.rs  station_fn.rs  station_fn_metadata_ext.rs  station_fn_res.rs  station_fn_return.rs  station_id.rs  station_id_invalid_fmt.rs  station_mut.rs  station_op.rs  station_progress.rs  station_spec.rs  station_spec_builder.rs  station_spec_fns.rs  station_specs.rs  train_report.rs  visit_status.rs
crate/cfg_model/src/rt/: check_status.rs  files.rs  files_rw.rs  op_status.rs  res_id_logical.rs  res_ids.rs  resource_id_logical.rs  resource_id_physical.rs  resource_ids.rs  station.rs  station_dir.rs  station_errors.rs  station_mut.rs  station_mut_ref.rs  station_progress.rs  station_rt_id.rs  train_report.rs  train_resources.rs  visit_op.rs  visit_status.rs
crate/cfg_model/src/station_fn/: into_station_fn_res.rs  into_station_fn_resource.rs  station_fn_res.rs  station_fn_res_impl.rs  station_fn_resource.rs  station_fn_resource_impl.rs  station_fn_return.rs
crate/cfg_model/src/station_op/: clean_fns.rs  create_fns.rs  op_fns.rs
crate/cli_fmt/: Cargo.toml
crate/cli_fmt/src/: lib.rs  plain_text_formatter.rs
crate/resource/: Cargo.toml
crate/resource/src/: files_rw.rs  history_dir.rs  lib.rs  profile.rs  profile_dir.rs  profile_error.rs  profile_history_dir.rs  station_dir.rs  workspace_dir.rs
crate/rt_logic/: Cargo.toml
crate/rt_logic/src/: clean_driver.rs  clean_op_status_updater.rs  create_driver.rs  driver.rs  lib.rs  op_status_updater.rs  res_id_persister.rs  resource_initializer.rs  train.rs  visit_status_updater.rs
crate/rt_logic/src/strategy/: integrity_strat.rs
crate/rt_logic/src/strategy/integrity_strat/: station_queuer.rs  station_visitor.rs
crate/rt_logic/src/train/: train_clean.rs  train_create.rs
crate/rt_model/: Cargo.toml
crate/rt_model/src/: clean_ensure_outcome.rs  create_ensure_outcome.rs  destination.rs  destination_builder.rs  destination_dir_calc.rs  destination_dirs.rs  ensure_outcome.rs  error.rs  files.rs  lib.rs  profile_history_station_dir.rs  profile_history_station_dirs.rs  station.rs  station_dirs.rs  station_errors.rs  station_mut.rs  station_progresses.rs  station_rt_id.rs  station_specs.rs  train_report.rs  workspace_spec.rs
crate/rt_model/src/error/: as_diagnostic.rs  station_spec_error.rs
examples/: demo.rs  simple.rs  simple.toml
examples/demo/: app_zip.rs  artifact_server_dir.rs  demo_error.rs  dependency_mode.rs  error.rs  res_ids.rs  server_params.rs  station_a.rs  station_b.rs  station_c.rs  station_d.rs  station_e.rs  station_f.rs  station_g.rs  station_h.rs  station_sleep.rs
examples/demo/station_a/: station_a_clean.rs  station_a_create.rs  station_a_errors.rs
src/: cfg_model.rs  destination.rs  fmt.rs  lib.rs  rt_logic.rs  rt_model.rs  station.rs  stations.rs  train.rs  visit_fn.rs  visit_status.rs
src/cfg_model/: check_status.rs  station_fn.rs  station_id.rs  station_id_invalid_fmt.rs  station_progress.rs  station_spec.rs  station_spec_fns.rs  visit_fn.rs  workload.rs
src/fmt/: plain_text_formatter.rs
src/rt_logic/: driver.rs  integrity_strat.rs  strategy.rs  visit_status_updater.rs
src/rt_logic/strategy/: integrity_strat.rs
src/rt_logic/strategy/integrity_strat/: station_queuer.rs  station_visitor.rs
src/rt_model/: destination.rs  ensure_outcome.rs  error.rs  files.rs  station.rs  station_mut.rs  station_progresses.rs  station_rt_id.rs  station_specs.rs  stations.rs  train_report.rs  visit_status.rs
src/rt_model/error/: as_diagnostic.rs  station_spec_error.rs
workspace_tests/: Cargo.toml
workspace_tests/src/: cfg_model.rs  cli_fmt.rs  lib.rs  rt_logic.rs  rt_model.rs
workspace_tests/src/cfg_model/: station_fn.rs  station_id.rs  station_id_invalid_fmt.rs  station_progress.rs  station_spec.rs
workspace_tests/src/cli_fmt/: plain_text_formatter.rs
workspace_tests/src/resource/: profile.rs
workspace_tests/src/rt_logic/: integrity_strat.rs  op_status_updater.rs  res_id_persister.rs  resource_initializer.rs  train.rs  visit_status_updater.rs
workspace_tests/src/rt_model/: destination.rs  destination_builder.rs  destination_dir_calc.rs  station_specs.rs
