[package]
name = "choochoo"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Automation that starts where it stops."
repository = "https://github.com/azriel91/choochoo"
documentation = "https://docs.rs/choochoo/"
readme = "README.md"
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
doctest = true
test = false

[dependencies]
choochoo_cfg_model = { path = "crate/cfg_model", version = "0.1.0" }
choochoo_cli_fmt = { path = "crate/cli_fmt", version = "0.1.0" }
choochoo_rt_logic = { path = "crate/rt_logic", version = "0.1.0" }
choochoo_rt_model = { path = "crate/rt_model", version = "0.1.0" }
futures = "0.3.17"
tokio = { version = "1.11.0", features = ["io-util", "rt", "sync"] }

[dev-dependencies]
bytes = "1.1.0"
pico-args = "0.4.2"
reqwest = { version = "0.11.4", features = ["multipart", "stream"] }
tokio = { version = "1.11.0", features = ["fs", "rt", "rt-multi-thread", "sync", "io-std"] }
tokio-util = { version = "0.6.7", features = ["codec"] }

[workspace]
members = ["crate/*", "workspace_tests"]
