[package]
name = "choochoo_cfg_model"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Configuration data types for the choochoo automation library."
repository = "https://github.com/azriel91/choochoo"
documentation = "https://docs.rs/choochoo_cfg_model/"
readme = "../../README.md"
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false
test = false

[dependencies]
choochoo_resource = { path = "../resource", version = "0.1.0" }
console = "0.15.0"
daggy = { version = "0.8.0", default-features = false }
fn_graph = "0.1.0"
futures = "0.3.18"
indexmap = "1.7.0"
indicatif = "0.16.2"
resman = { version = "0.11.0", features = ["debug"] }
rt_map = "0.5.0"
srcerr = { version = "0.4.0", features = ["codespan"] }
tokio = { version = "1.14.0", features = ["io-util", "rt", "sync"] }

[features]
default = ["debug", "mock"]
debug = []
mock = []
