[package]
name = "choochoo_resource"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Runtime data types for the choochoo automation library."
repository = "https://github.com/azriel91/choochoo"
documentation = "https://docs.rs/choochoo_resource/"
readme = "../../README.md"
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false
test = false

[dependencies]
srcerr = { version = "0.4.0", features = ["codespan"] }
tokio = { version = "1.14.0", features = ["io-util", "rt", "sync"] }
