[package]
name = "choochoo_rt_model"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Runtime data types for the choochoo automation library."
repository = "https://github.com/azriel91/choochoo"
documentation = "https://docs.rs/choochoo_rt_model/"
readme = "../../README.md"
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[dependencies]
choochoo_cfg_model = { path = "../cfg_model", version = "0.1.0" }
daggy = { version = "0.7.0", default-features = false }
indexmap = "1.7.0"
rt_map = "0.4.0"
srcerr = { version = "0.4.0", features = ["codespan"] }
tokio = { version = "1.11.0", features = ["io-util", "rt", "sync"] }
