[package]
name = "choochoo_rt_model"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Runtime information for the choochoo automation library."
repository = "https://github.com/azriel91/choochoo"
documentation = "https://docs.rs/choochoo_rt_model/"
readme = "../../README.md"
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false
test = false

[dependencies]
choochoo_resource = { path = "../resource", version = "0.1.0" }
choochoo_cfg_model = { path = "../cfg_model", version = "0.1.0" }
futures = "0.3.18"
serde_json = "1.0.79"
tokio = { version = "1.14.0", features = ["io-util", "rt", "sync"] }
